[package]
authors = ["Junho Yeo <i@junho.io>"]
description = "Outputs a random number of 🌈's"
edition = "2018"
license = "Apache-2.0"
name = "rainbows"
version = "1.0.0"
repository = "https://github.com/junhoyeo/rainbows"
readme = "README.md"
exclude = [
  ".github/*",
  ".vscode/*",
]

[[bin]]
name = "rainbows"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
rand = "0.8.4"

[dev-dependencies]
assert_cmd = "2.0.1"
